--- a/SiteDeEventos/cadastroe.html
+++ b/SiteDeEventos/cadastroe.html
@@ -8,6 +8,7 @@
   <title>Cadastro</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="scriptcadastroe.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,8 +18,8 @@
         <img src="img/aiaiai.png" alt="" height="70px">
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Eventos</a></li>
+          <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
+          <li><a href="eventos.html" class="nav-link px-2 text-white">Eventos</a></li>
           <li><a href="cadastroe.html" class="nav-link px-2 text-warning">Divulgue o seu!</a></li>
         </ul>
 
@@ -28,8 +29,8 @@
         </form>
 
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Cadastro</button>
+          <a class="btn btn-outline-light me-2" href="login.html" role="button">Login</a>
+          <a class="btn btn-warning" href="cadastro.html" role="button">Cadastro</a>
         </div>
       </div>
     </div>
@@ -61,6 +62,17 @@
       </form>
     </div>
   </section>
+
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+      <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
+    </footer>
 
 </body>
 
